--- a/scss/components/search-bar-header/_search--header-search.scss
+++ b/scss/components/search-bar-header/_search--header-search.scss
@@ -1,4 +1,4 @@
-// navigation adjustment for adding search inside the navigation divs 
+// navigation adjustment for adding search inside the navigation divs
 
 @media only screen and (min-width: 860px) {
   .navbar__group {
@@ -23,7 +23,7 @@
     padding-left: 0;
     padding-right: 0;
     margin-left: 20px;
-    // creates space between menu nav links and search 
+    // creates space between menu nav links and search
   }
 }
 
@@ -73,32 +73,32 @@
     align-items: flex-start;
     margin-top: 17px;
   }
-  
+
   #views-exposed-form-acquia-search-page.expanded {
     margin-top: 15px;
   }
-  
+
   #views-exposed-form-acquia-search-page>* {
-    // 2 form inner sections 
+    // 2 form inner sections
     display: flex;
     align-items: center;
   }
-  
+
   #views-exposed-form-acquia-search-page>.form-item.form-item-search {
     max-height: 35px;
   }
-  
+
   .views-exposed-filter-block.acquia-search-page .block__title {
     display: none;
   }
-  
+
   #views-exposed-form-acquia-search-page input {
     outline: none;
     margin: 13px 0;
   }
-  
+
   #views-exposed-form-acquia-search-page input[type="text"] {
-    background: transparent url("/themes/stanford/matson/img/source/search-white.svg") no-repeat 9px center; 
+    background: transparent url("/themes/stanford/matson/img/source/search-white.svg") no-repeat 9px center;
     background-size: 14px 14px;
     box-sizing: border-box;
     border: 0;
@@ -111,16 +111,16 @@
     -moz-transition: all 0.5s;
     transition: all 0.5s;
   }
-  
+
   @media only screen and (min-width: 860px) {
     #views-exposed-form-acquia-search-page input[type="text"] {
-      //background-color: transparent; 
+      //background-color: transparent;
       background-position: 15px 10px;
       border: 0;
       width: 0;
     }
   }
-  
+
   #views-exposed-form-acquia-search-page:hover>.form-item-search,
   #views-exposed-form-acquia-search-page:focus>.form-item-search,
   #views-exposed-form-acquia-search-page:hover #views-exposed-form-acquia-search-page input[type="text"],
@@ -129,18 +129,18 @@
     color: #6e6f72;
     transition: 0.3s;
   }
-  
+
   .navbar__search:hover label,
   .navbar__search:focus label {
     text-shadow: none;
   }
-  
+
   // search text that shows before search is opened
   .navbar__search #views-exposed-form-acquia-search-page:hover label,
   .navbar__search #views-exposed-form-acquia-search-page:focus label {
     color: #6e6f72;
   }
-  
+
   // opened search form
   #block-exposedformacquia-searchpage-2 #views-exposed-form-acquia-search-page input[type="text"],
   #views-exposed-form-acquia-search-page.expanded #edit-search,
@@ -149,32 +149,33 @@
     background: #fff url("/themes/stanford/matson/img/source/search.svg") no-repeat 15px 9px;
     background-size: 14px;
   }
+
   #views-exposed-form-acquia-search-page {
     input[type="submit"] {
       visibility: hidden;
       background: #6e6f72;
       display: block;
     }
-    
+
     &.expanded input[type="submit"]#edit-submit-acquia-search {
       visibility: visible;
       background: #6e6f72;
     }
-    
-    //  For large screen sizes, adding clickable button area 
+
+    //  For large screen sizes, adding clickable button area
     @media only screen and (min-width: 860px) {
-    
+
       #edit-actions {
-        // button container 
+        // button container
         margin-top: 0;
         position: relative;
         max-height: 35px;
       }
-    
+
       &.expanded #edit-actions {
         margin: 0;
       }
-    
+
       //  -- removed expanded
       input[type="submit"]#edit-submit-acquia-search {
         display: block;
@@ -182,7 +183,7 @@
         position: relative;
         padding: 5px 15px 5px;
         min-width: 120px;
-        border: none;
+        border: 0;
         z-index: auto;
         font-size: 0.75em;
         font-family: "Source Sans Pro", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
@@ -190,25 +191,25 @@
         color: #fff;
         text-transform: uppercase;
       }
-    
+
       input[type="submit"]#edit-submit-acquia-search {
         background-color: transparent;
-        // overrides default blue button color when we're not setting gray background for hover 
+        // overrides default blue button color when we're not setting gray background for hover
       }
-    
+
     }
-    
-    // end of media query 
+
+    // end of media query
     input::-webkit-search-cancel-button,
     input::-webkit-search-decoration {
       display: none;
     }
-    
+
     input[type="text"]:focus {
       background-color: #6e6f72;
       border: 0;
     }
-    
+
     @media only screen and (min-width: 860px) {
       input[type="text"]:focus {
         //background-position: 98% center;
@@ -219,11 +220,11 @@
         width: 520px;
       }
     }
-    
+
     input::-moz-placeholder {
       color: #fff;
     }
-    
+
     input::-webkit-input-placeholder {
       color: #fff;
     }
